--- a/Stan's Datasets Notebooks/POI Datasets.ipynb
+++ b/Stan's Datasets Notebooks/POI Datasets.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
        "4             AB     T2B 3B5     CAN  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
     "\n",
     "truck_stops = pd.read_csv('Truck_Stops.csv', header=None, names=['Longitude', 'Latitude', 'Truck Stop Name', \n",
     "                                                        'Phone Number','Street Address', 'City', \n",
-    "                                                        'State/Province', 'Postal Code', 'Country'] )\n",
+    "                                                        'State/Province', 'Postal Code', 'Country'])\n",
     "\n",
     "print(truck_stops.shape)\n",
     "truck_stops.head()"
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -194,12 +194,12 @@
     }
    ],
    "source": [
-    "ts.info()"
+    "truck_stops.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +292,7 @@
        "4             AB  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
    "source": [
     "# Dump Stations Dataset\n",
     "\n",
-    "dump_stations = pd.read_csv('Dump Stations.csv', encoding='ISO-8859-1', header=None)\n",
+    "dump_stations = pd.read_csv('Dump_Stations.csv', encoding='ISO-8859-1', header=None)\n",
     "\n",
     "# Removing columns with null values\n",
     "dump_stations = dump_stations.drop(columns=[3, 5, 6, 7, 8])\n",
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -336,6 +336,285 @@
    ],
    "source": [
     "dump_stations.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(21823, 4)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Attraction Name</th>\n",
+       "      <th>Address</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-111.852043</td>\n",
+       "      <td>34.564199</td>\n",
+       "      <td>0 Mile Post General Crook Trail</td>\n",
+       "      <td>125 E Hollamon St,Camp Verde AZ 86322</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-115.112489</td>\n",
+       "      <td>36.155276</td>\n",
+       "      <td>1 Million In Cash And Worlds Largest Gold Nugg...</td>\n",
+       "      <td>128 E Fremont St,Las Vegas NV 89104,800-237-6537</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-115.174634</td>\n",
+       "      <td>36.102099</td>\n",
+       "      <td>1/3 Scale Statue Of Liberty-empire State Build...</td>\n",
+       "      <td>3790 Blvd S,Las Vegas NV 89109,800-693-6763</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-122.662532</td>\n",
+       "      <td>44.853749</td>\n",
+       "      <td>10 Waterfalls-Walk Behind One</td>\n",
+       "      <td>20024 Silver Falls Hwy Se,Sublimity OR 97385,5...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-119.627036</td>\n",
+       "      <td>36.573152</td>\n",
+       "      <td>10-Ft California Dancing Raisin At Spike And R...</td>\n",
+       "      <td>2910 Pea Soup Anderson Blvd,Selma CA 93662</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Longitude   Latitude                                    Attraction Name  \\\n",
+       "0 -111.852043  34.564199                    0 Mile Post General Crook Trail   \n",
+       "1 -115.112489  36.155276  1 Million In Cash And Worlds Largest Gold Nugg...   \n",
+       "2 -115.174634  36.102099  1/3 Scale Statue Of Liberty-empire State Build...   \n",
+       "3 -122.662532  44.853749                      10 Waterfalls-Walk Behind One   \n",
+       "4 -119.627036  36.573152  10-Ft California Dancing Raisin At Spike And R...   \n",
+       "\n",
+       "                                             Address  \n",
+       "0              125 E Hollamon St,Camp Verde AZ 86322  \n",
+       "1   128 E Fremont St,Las Vegas NV 89104,800-237-6537  \n",
+       "2        3790 Blvd S,Las Vegas NV 89109,800-693-6763  \n",
+       "3  20024 Silver Falls Hwy Se,Sublimity OR 97385,5...  \n",
+       "4         2910 Pea Soup Anderson Blvd,Selma CA 93662  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tourist_attractions = pd.read_csv('All_States_Offbeat_Tourist_Attractions.csv', encoding='ISO-8859-1', header=None, \n",
+    "                                  names=['Longitude', 'Latitude', 'Attraction Name', 'Address'])\n",
+    "\n",
+    "print(tourist_attractions.shape)\n",
+    "tourist_attractions.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 21823 entries, 0 to 21822\n",
+      "Data columns (total 4 columns):\n",
+      "Longitude          21823 non-null float64\n",
+      "Latitude           21823 non-null float64\n",
+      "Attraction Name    21823 non-null object\n",
+      "Address            21823 non-null object\n",
+      "dtypes: float64(2), object(2)\n",
+      "memory usage: 682.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "tourist_attractions.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(330, 9)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Campsite Name</th>\n",
+       "      <th>Phone Number</th>\n",
+       "      <th>Street Address</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State/Province</th>\n",
+       "      <th>Postal Code</th>\n",
+       "      <th>Country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-112.771679</td>\n",
+       "      <td>51.471597</td>\n",
+       "      <td>Dinosaur Trail RV Resort (GNP)</td>\n",
+       "      <td>(403) 823-9333</td>\n",
+       "      <td>Hwy 838 N</td>\n",
+       "      <td>Drumheller</td>\n",
+       "      <td>AB</td>\n",
+       "      <td>T0J 0Y0</td>\n",
+       "      <td>CAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-118.814088</td>\n",
+       "      <td>55.105035</td>\n",
+       "      <td>Camp Tamarack RV Park (GNP)</td>\n",
+       "      <td>(780) 532-9998</td>\n",
+       "      <td>704063 Range Rd 62</td>\n",
+       "      <td>Grand Praire</td>\n",
+       "      <td>AB</td>\n",
+       "      <td>T8W 5B3</td>\n",
+       "      <td>CAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-112.871180</td>\n",
+       "      <td>49.711110</td>\n",
+       "      <td>Bridgeview RV Resort (Holiday Trails Resort)</td>\n",
+       "      <td>(403) 381-2357</td>\n",
+       "      <td>1501 2nd Ave W</td>\n",
+       "      <td>Lethbridge</td>\n",
+       "      <td>AB</td>\n",
+       "      <td>T1J 4S5</td>\n",
+       "      <td>CAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-115.032757</td>\n",
+       "      <td>52.442406</td>\n",
+       "      <td>Wilderness Village at Crimson Lake</td>\n",
+       "      <td>(403) 845-2145</td>\n",
+       "      <td>Hwy 756</td>\n",
+       "      <td>Rocky Mountain House</td>\n",
+       "      <td>AB</td>\n",
+       "      <td>T4T 1A9</td>\n",
+       "      <td>CAN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-117.298700</td>\n",
+       "      <td>55.053653</td>\n",
+       "      <td>Sherk's RV Park (GNP)</td>\n",
+       "      <td>(780) 524-4949</td>\n",
+       "      <td>22362 Township Rd</td>\n",
+       "      <td>Valleyview</td>\n",
+       "      <td>AB</td>\n",
+       "      <td>T0H 3N0</td>\n",
+       "      <td>CAN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Longitude   Latitude                                 Campsite Name  \\\n",
+       "0 -112.771679  51.471597                Dinosaur Trail RV Resort (GNP)   \n",
+       "1 -118.814088  55.105035                   Camp Tamarack RV Park (GNP)   \n",
+       "2 -112.871180  49.711110  Bridgeview RV Resort (Holiday Trails Resort)   \n",
+       "3 -115.032757  52.442406            Wilderness Village at Crimson Lake   \n",
+       "4 -117.298700  55.053653                         Sherk's RV Park (GNP)   \n",
+       "\n",
+       "     Phone Number      Street Address                  City State/Province  \\\n",
+       "0  (403) 823-9333           Hwy 838 N            Drumheller             AB   \n",
+       "1  (780) 532-9998  704063 Range Rd 62          Grand Praire             AB   \n",
+       "2  (403) 381-2357      1501 2nd Ave W            Lethbridge             AB   \n",
+       "3  (403) 845-2145             Hwy 756  Rocky Mountain House             AB   \n",
+       "4  (780) 524-4949   22362 Township Rd            Valleyview             AB   \n",
+       "\n",
+       "  Postal Code Country  \n",
+       "0     T0J 0Y0     CAN  \n",
+       "1     T8W 5B3     CAN  \n",
+       "2     T1J 4S5     CAN  \n",
+       "3     T4T 1A9     CAN  \n",
+       "4     T0H 3N0     CAN  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coast2coast = pd.read_csv('Coast to Coast Campgrounds.csv', header=None, \n",
+    "                         names=['Longitude', 'Latitude', 'Campsite Name', \n",
+    "                                'Phone Number', 'Street Address', 'City', \n",
+    "                                'State/Province', 'Postal Code', 'Country'])\n",
+    "print(coast2coast.shape)\n",
+    "coast2coast.head()"
    ]
   },
   {
