--- a/Stan's Datasets Notebooks/POI Datasets.ipynb
+++ b/Stan's Datasets Notebooks/POI Datasets.ipynb
@@ -159,9 +159,10 @@
    "source": [
     "# Truck Stops Dataset\n",
     "\n",
-    "truck_stops = pd.read_csv('Truck_Stops.csv', header=None, names=['Longitude', 'Latitude', 'Truck Stop Name', \n",
-    "                                                        'Phone Number','Street Address', 'City', \n",
-    "                                                        'State/Province', 'Postal Code', 'Country'])\n",
+    "truck_stops = pd.read_csv('Truck_Stops.csv', header=None, \n",
+    "                          names=['Longitude', 'Latitude', 'Truck Stop Name', \n",
+    "                                 'Phone Number','Street Address', 'City', \n",
+    "                                 'State/Province', 'Postal Code', 'Country'])\n",
     "\n",
     "print(truck_stops.shape)\n",
     "truck_stops.head()"
@@ -169,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +293,7 @@
        "4             AB  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -315,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +341,92 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Dump Site Name</th>\n",
+       "      <th>State/Province</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1383</th>\n",
+       "      <td>-116.619984</td>\n",
+       "      <td>51.84209</td>\n",
+       "      <td>Lake</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Longitude  Latitude Dump Site Name State/Province\n",
+       "1383 -116.619984  51.84209           Lake            NaN"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dump_stations[dump_stations.isna().any(axis=1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1435 entries, 0 to 1434\n",
+      "Data columns (total 4 columns):\n",
+      "Longitude         1435 non-null float64\n",
+      "Latitude          1435 non-null float64\n",
+      "Dump Site Name    1435 non-null object\n",
+      "State/Province    1435 non-null object\n",
+      "dtypes: float64(2), object(2)\n",
+      "memory usage: 45.0+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "dump_stations = dump_stations.fillna('AB')\n",
+    "\n",
+    "dump_stations.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +519,7 @@
        "4         2910 Pea Soup Anderson Blvd,Selma CA 93662  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +689,7 @@
        "4     T0H 3N0     CAN  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,6 +701,414 @@
     "                                'State/Province', 'Postal Code', 'Country'])\n",
     "print(coast2coast.shape)\n",
     "coast2coast.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 330 entries, 0 to 329\n",
+      "Data columns (total 9 columns):\n",
+      "Longitude         330 non-null float64\n",
+      "Latitude          330 non-null float64\n",
+      "Campsite Name     330 non-null object\n",
+      "Phone Number      330 non-null object\n",
+      "Street Address    330 non-null object\n",
+      "City              330 non-null object\n",
+      "State/Province    330 non-null object\n",
+      "Postal Code       330 non-null object\n",
+      "Country           327 non-null object\n",
+      "dtypes: float64(2), object(7)\n",
+      "memory usage: 23.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "coast2coast.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Campsite Name</th>\n",
+       "      <th>Phone Number</th>\n",
+       "      <th>Street Address</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State/Province</th>\n",
+       "      <th>Postal Code</th>\n",
+       "      <th>Country</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>235</th>\n",
+       "      <td>-63.673078</td>\n",
+       "      <td>46.254270</td>\n",
+       "      <td>Jellystone Park PEI (GNP)</td>\n",
+       "      <td>(844) 734-9644</td>\n",
+       "      <td>23714 Trans Canada Hwy</td>\n",
+       "      <td>Borden-Carleton</td>\n",
+       "      <td>PEI</td>\n",
+       "      <td>C0B 1X0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>236</th>\n",
+       "      <td>-63.372319</td>\n",
+       "      <td>46.484092</td>\n",
+       "      <td>Marco Polo Land (GNP)</td>\n",
+       "      <td>(902) 963-2352</td>\n",
+       "      <td>7406 Rte 13</td>\n",
+       "      <td>Cavendish</td>\n",
+       "      <td>PEI</td>\n",
+       "      <td>C0A 1N0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>237</th>\n",
+       "      <td>-63.661240</td>\n",
+       "      <td>46.560556</td>\n",
+       "      <td>Twin Shores Camping Area (GNP)</td>\n",
+       "      <td>(902) 836-4142</td>\n",
+       "      <td>702 Lower Darnley Rd</td>\n",
+       "      <td>Darrnley</td>\n",
+       "      <td>PEI</td>\n",
+       "      <td>C0B 1M0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Longitude   Latitude                   Campsite Name    Phone Number  \\\n",
+       "235 -63.673078  46.254270       Jellystone Park PEI (GNP)  (844) 734-9644   \n",
+       "236 -63.372319  46.484092           Marco Polo Land (GNP)  (902) 963-2352   \n",
+       "237 -63.661240  46.560556  Twin Shores Camping Area (GNP)  (902) 836-4142   \n",
+       "\n",
+       "             Street Address             City State/Province Postal Code  \\\n",
+       "235  23714 Trans Canada Hwy  Borden-Carleton            PEI     C0B 1X0   \n",
+       "236             7406 Rte 13        Cavendish            PEI     C0A 1N0   \n",
+       "237    702 Lower Darnley Rd         Darrnley            PEI     C0B 1M0   \n",
+       "\n",
+       "    Country  \n",
+       "235     NaN  \n",
+       "236     NaN  \n",
+       "237     NaN  "
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "coast2coast[coast2coast.isna().any(axis=1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 330 entries, 0 to 329\n",
+      "Data columns (total 9 columns):\n",
+      "Longitude         330 non-null float64\n",
+      "Latitude          330 non-null float64\n",
+      "Campsite Name     330 non-null object\n",
+      "Phone Number      330 non-null object\n",
+      "Street Address    330 non-null object\n",
+      "City              330 non-null object\n",
+      "State/Province    330 non-null object\n",
+      "Postal Code       330 non-null object\n",
+      "Country           330 non-null object\n",
+      "dtypes: float64(2), object(7)\n",
+      "memory usage: 23.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "coast2coast = coast2coast.fillna('CAN')\n",
+    "\n",
+    "coast2coast.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6707, 3)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Bridge Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-73.681700</td>\n",
+       "      <td>42.771700</td>\n",
+       "      <td>112th Street Bridge</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-73.933139</td>\n",
+       "      <td>40.819525</td>\n",
+       "      <td>145th Street Bridge</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-73.954511</td>\n",
+       "      <td>40.756750</td>\n",
+       "      <td>59 St (Queensboro) Bridge</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-80.084470</td>\n",
+       "      <td>26.933700</td>\n",
+       "      <td>706 Bridge</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-83.145470</td>\n",
+       "      <td>41.209800</td>\n",
+       "      <td>Abbots Bridge</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Longitude   Latitude                Bridge Name\n",
+       "0 -73.681700  42.771700        112th Street Bridge\n",
+       "1 -73.933139  40.819525        145th Street Bridge\n",
+       "2 -73.954511  40.756750  59 St (Queensboro) Bridge\n",
+       "3 -80.084470  26.933700                 706 Bridge\n",
+       "4 -83.145470  41.209800              Abbots Bridge"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bridges_usa = pd.read_csv('Bridges USA.csv', header=None)\n",
+    "\n",
+    "bridges_usa = bridges_usa.drop(columns=[3])\n",
+    "\n",
+    "bridges_usa = bridges_usa.rename(columns={0: 'Longitude', 1:'Latitude', 2:'Bridge Name'})\n",
+    "\n",
+    "print(bridges_usa.shape)\n",
+    "bridges_usa.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 6707 entries, 0 to 6706\n",
+      "Data columns (total 3 columns):\n",
+      "Longitude      6707 non-null float64\n",
+      "Latitude       6707 non-null float64\n",
+      "Bridge Name    6707 non-null object\n",
+      "dtypes: float64(2), object(1)\n",
+      "memory usage: 157.3+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "bridges_usa.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(125, 3)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Longitude</th>\n",
+       "      <th>Latitude</th>\n",
+       "      <th>Descent Description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-75.95856</td>\n",
+       "      <td>41.07620</td>\n",
+       "      <td>HWY 40013 Mountain Top PA short steep</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-76.03548</td>\n",
+       "      <td>40.98221</td>\n",
+       "      <td>I 81 Nb Hazle PA steep</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-75.94457</td>\n",
+       "      <td>41.17461</td>\n",
+       "      <td>I 81 Nb Warrior Run PA 4% for 3 miles</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-74.62840</td>\n",
+       "      <td>41.37424</td>\n",
+       "      <td>I 84 Wb Port Jervis NY steep</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-74.78590</td>\n",
+       "      <td>41.34467</td>\n",
+       "      <td>I 84 Eb Milford PA long steep</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Longitude  Latitude                    Descent Description\n",
+       "0  -75.95856  41.07620  HWY 40013 Mountain Top PA short steep\n",
+       "1  -76.03548  40.98221                 I 81 Nb Hazle PA steep\n",
+       "2  -75.94457  41.17461  I 81 Nb Warrior Run PA 4% for 3 miles\n",
+       "3  -74.62840  41.37424           I 84 Wb Port Jervis NY steep\n",
+       "4  -74.78590  41.34467          I 84 Eb Milford PA long steep"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "road_descents = pd.read_csv('Descents125.csv', header=None, \n",
+    "                            names=['Longitude', 'Latitude', \n",
+    "                            'Descent Description'])\n",
+    "\n",
+    "print(road_descents.shape)\n",
+    "road_descents.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 125 entries, 0 to 124\n",
+      "Data columns (total 3 columns):\n",
+      "Longitude              125 non-null float64\n",
+      "Latitude               125 non-null float64\n",
+      "Descent Description    125 non-null object\n",
+      "dtypes: float64(2), object(1)\n",
+      "memory usage: 3.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "road_descents.info()"
    ]
   },
   {
