Seperating Raw CSVs from cleaned CSVs

--- a/Stan's Datasets Notebooks/POI Datasets.ipynb
+++ b/Stan's Datasets Notebooks/POI Datasets.ipynb
@@ -11,17 +11,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Pandas importing for EDA\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "# import os for csv file writing to file path\n",
+    "import os\n",
+    "\n",
+    "import re\n",
+    "\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +157,7 @@
        "4             AB     T2B 3B5     CAN  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +165,7 @@
    "source": [
     "# Truck Stops Dataset\n",
     "\n",
-    "truck_stops = pd.read_csv('Truck_Stops.csv', header=None, \n",
+    "truck_stops = pd.read_csv('Raw POI Factory Datasets/Truck_Stops.csv', header=None, \n",
     "                          names=['Longitude', 'Latitude', 'Truck Stop Name', \n",
     "                                 'Phone Number','Street Address', 'City', \n",
     "                                 'State/Province', 'Postal Code', 'Country'])\n",
@@ -170,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -196,6 +202,31 @@
    ],
    "source": [
     "truck_stops.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "either both or neither of x and y should be given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-40-c788c9db3bee>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# df['cleaned'] = np.where(df['input'].str.contains('<'), df['input'].str.extract('<(.*)>'), df['input'])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtruck_stops\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Name'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwhere\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtruck_stops\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Truck Stop Name'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontains\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Flying J'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtruck_stops\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Truck Stop Name'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mtruck_stops\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: either both or neither of x and y should be given"
+     ]
+    }
+   ],
+   "source": [
+    "# df['cleaned'] = np.where(df['input'].str.contains('<'), df['input'].str.extract('<(.*)>'), df['input'])\n",
+    "\n",
+    "truck_stops['Name'] = np.where(truck_stops['Truck Stop Name'].str.contains('Flying J '), truck_stops['Truck Stop Name'].str.extract())\n",
+    "\n",
+    "truck_stops.head()"
    ]
   },
   {
@@ -301,7 +332,7 @@
    "source": [
     "# Dump Stations Dataset\n",
     "\n",
-    "dump_stations = pd.read_csv('Dump_Stations.csv', encoding='ISO-8859-1', header=None)\n",
+    "dump_stations = pd.read_csv('Raw POI Factory Datasets/Dump_Stations.csv', encoding='ISO-8859-1', header=None)\n",
     "\n",
     "# Removing columns with null values\n",
     "dump_stations = dump_stations.drop(columns=[3, 5, 6, 7, 8])\n",
@@ -341,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +419,7 @@
        "1383 -116.619984  51.84209           Lake            NaN"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -422,6 +453,36 @@
     "dump_stations = dump_stations.fillna('AB')\n",
     "\n",
     "dump_stations.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"/home/seek/Documents/GitHub/labs15-rv-life/data-science/Stan's Datasets Notebooks\""
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Writing cleaned dataset to csv\n",
+    "dump_stations.to_csv(os.path.join(r'dump_stations.csv'),index=False)"
    ]
   },
   {
@@ -525,7 +586,7 @@
     }
    ],
    "source": [
-    "tourist_attractions = pd.read_csv('All_States_Offbeat_Tourist_Attractions.csv', encoding='ISO-8859-1', header=None, \n",
+    "tourist_attractions = pd.read_csv('Raw POI Factory Datasets/All_States_Offbeat_Tourist_Attractions.csv', encoding='ISO-8859-1', header=None, \n",
     "                                  names=['Longitude', 'Latitude', 'Attraction Name', 'Address'])\n",
     "\n",
     "print(tourist_attractions.shape)\n",
@@ -560,6 +621,16 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Writing cleaned dataset to csv\n",
+    "tourist_attractions.to_csv(os.path.join(r'tourist_attractions.csv'),index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -689,13 +760,13 @@
        "4     T0H 3N0     CAN  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "coast2coast = pd.read_csv('Coast to Coast Campgrounds.csv', header=None, \n",
+    "coast2coast = pd.read_csv('Raw POI Factory Datasets/Coast to Coast Campgrounds.csv', header=None, \n",
     "                         names=['Longitude', 'Latitude', 'Campsite Name', \n",
     "                                'Phone Number', 'Street Address', 'City', \n",
     "                                'State/Province', 'Postal Code', 'Country'])\n",
@@ -705,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +899,7 @@
        "237     NaN  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +942,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Writing cleaned dataset to csv\n",
+    "coast2coast.to_csv(os.path.join(r'coast2coast.csv'),index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -951,13 +1032,13 @@
        "4 -83.145470  41.209800              Abbots Bridge"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bridges_usa = pd.read_csv('Bridges USA.csv', header=None)\n",
+    "bridges_usa = pd.read_csv('Raw POI Factory Datasets/Bridges USA.csv', header=None)\n",
     "\n",
     "bridges_usa = bridges_usa.drop(columns=[3])\n",
     "\n",
@@ -969,7 +1050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -993,7 +1074,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Writing cleaned dataset to csv\n",
+    "bridges_usa.to_csv(os.path.join(r'bridges_usa.csv'),index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1073,13 +1164,13 @@
        "4  -74.78590  41.34467          I 84 Eb Milford PA long steep"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "road_descents = pd.read_csv('Descents125.csv', header=None, \n",
+    "road_descents = pd.read_csv('Raw POI Factory Datasets/Descents125.csv', header=None, \n",
     "                            names=['Longitude', 'Latitude', \n",
     "                            'Descent Description'])\n",
     "\n",
@@ -1089,7 +1180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1109,6 +1200,16 @@
    ],
    "source": [
     "road_descents.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Writing cleaned dataset to csv\n",
+    "road_descents.to_csv(os.path.join(r'road_descents.csv'),index=False)"
    ]
   },
   {
