Testing different url's

--- a/connor_notebooks/road_hazard_scrape.ipynb
+++ b/connor_notebooks/road_hazard_scrape.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 83,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 84,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -205,7 +205,7 @@
    "outputs": [],
    "source": [
     "# We will initially test with the last two digits of the ID\n",
-    "base_url = 'https://www.surfacetracks.com/plus/get-feature.php?id=2'\n",
+    "base_url = 'https://www.surfacetracks.com/plus/get-feature.php?id=1'\n",
     "\n",
     "num_dict = {\n",
     "    0:'0',\n",
@@ -233,13 +233,14 @@
    "source": [
     "url_list = []\n",
     "\n",
+    "# Counters will increase using 'abacus' function below\n",
     "ones_counter = 0\n",
     "twos_counter = 0\n",
     "threes_counter = 0\n",
     "fours_counter = 0\n",
     "fives_counter = 0\n",
     "\n",
-    "for i in range(1,100001):\n",
+    "for i in range(1,11001):\n",
     "    \n",
     "    if ones_counter == 10:\n",
     "        ones_counter = ones_counter - 10\n",
@@ -257,6 +258,7 @@
     "        fours_counter = fours_counter - 10\n",
     "        fives_counter += 1\n",
     "    \n",
+    "    # url will change based upon the position of the counters\n",
     "    url = base_url + num_dict[fives_counter] + num_dict[fours_counter] + num_dict[threes_counter] + num_dict[twos_counter] + num_dict[ones_counter]\n",
     "    url_list.append(url)\n",
     "    ones_counter += 1"
@@ -1284,7 +1286,7 @@
     }
    ],
    "source": [
-    "# All combinations from 107300 to 107399\n",
+    "# Check list function is working properly\n",
     "url_list"
    ]
   },
@@ -1361,6 +1363,7 @@
    "source": [
     "json_list = []\n",
     "\n",
+    "# Scrape \n",
     "for url in url_list:\n",
     "    \n",
     "    try:\n",
@@ -1390,7 +1393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1399,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1414,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
